--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+<!-- 88 MAIN LUXE v13.1 (v12 기능 유지) -->
 <!-- ===== SEO 기본 세팅 ===== -->
 <title>배당 마진 계산기 · 스포츠 배당 분석기 | 라이브스코어 확인 후 배당 구조 분석 | 실시간 스코어를 보며 마진·확률 점검 </title>
 <meta name="description" content="88 — 스포츠 배당 분석기와 배당 마진(오버라운드) 계산기를 무료로 제공합니다. 분석기 사용 안내와 인증 놀이터 정보를 한 곳에서 확인하세요.">
@@ -978,88 +980,315 @@ select.insight-select{
 }
 
 
-/* === v13.2 premium refinements (ui only, keep all features) === */
 
-/* 1) Remove "TODAY/MAIN/..." prefix badges only in section titles */
-.section .title > .badge{ display:none !important; }
+/* ==== UI patch v4 (2026-02-07): premium midnight + two-card hero ==== */
+:root{
+  --radius-xl:26px;
+  --radius-lg:22px;
+  --glass: rgba(12,14,22,.60);
+  --glass2: rgba(10,12,18,.52);
+  --stroke: rgba(255,255,255,.10);
+  --stroke2: rgba(255,255,255,.14);
+  --shadow-lg: 0 28px 96px rgba(0,0,0,.66);
+  --shadow-md: 0 16px 52px rgba(0,0,0,.52);
+}
 
-/* 2) Header logo: remove card-like background, slightly bigger */
+body{
+  position:relative;
+  background:
+    radial-gradient(1200px 620px at 50% -10%, rgb(var(--accentRGB) / .18), transparent 58%),
+    radial-gradient(900px 540px at 15% 25%, rgba(120,170,255,.10), transparent 55%),
+    radial-gradient(900px 640px at 85% 35%, rgba(80,140,255,.08), transparent 55%),
+    linear-gradient(180deg, #05060b 0%, #060612 60%, #040408 100%);
+}
+/* subtle grain + vignette */
+body::before{
+  content:"";
+  position:fixed;
+  inset:0;
+  pointer-events:none;
+  z-index:-1;
+  opacity:.07;
+  background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='160' height='160'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.9' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='160' height='160' filter='url(%23n)' opacity='.45'/%3E%3C/svg%3E");
+  mix-blend-mode:overlay;
+}
+body::after{
+  content:"";
+  position:fixed;
+  inset:-1px;
+  pointer-events:none;
+  z-index:-1;
+  background:
+    radial-gradient(900px 500px at 50% 0%, rgba(0,0,0,0), rgba(0,0,0,.35) 58%, rgba(0,0,0,.78) 100%);
+}
+/* make sure main content stays above overlays */
+
+/* header becomes premium glass container */
+.header{
+  width:min(1100px, calc(100% - 28px));
+  margin:14px auto 12px;
+  padding:16px 14px 12px;
+  border-radius: var(--radius-xl);
+  background: var(--glass);
+  border:1px solid var(--stroke);
+  box-shadow: var(--shadow-md);
+  backdrop-filter: blur(16px);
+  -webkit-backdrop-filter: blur(16px);
+  overflow:hidden;
+}
+.header::before{
+  content:"";
+  position:absolute;
+  inset:-40px;
+  background:
+    radial-gradient(700px 280px at 50% 0%, rgb(var(--accentRGB) / .22), transparent 60%),
+    radial-gradient(520px 260px at 20% 20%, rgba(120,170,255,.10), transparent 60%);
+  opacity:.85;
+  pointer-events:none;
+}
+.header .logoLink{ position:relative; }
 .header .logoImg{
-  width:min(160px, 46vw) !important;
-  padding:0 !important;
-  background:transparent !important;
-  border:none !important;
-  box-shadow:none !important;
-  border-radius:0 !important;
-  filter: drop-shadow(0 14px 26px rgba(0,0,0,.55)) drop-shadow(0 0 18px rgba(74,163,255,.18));
-}
-.header .logoLink{ padding: 8px 0 0 !important; }
-
-/* 3) Make secondary/general buttons less blue (keep top two-card CTA vibe) */
-.btn,
-.small-btn,
-.insight-btn,
-.seg,
-.kchip{
-  background: rgba(255,255,255,.06) !important;
-  color: rgba(255,255,255,.92) !important;
-  border: 1px solid rgba(255,255,255,.14) !important;
-  box-shadow: 0 10px 28px rgba(0,0,0,.38) !important;
-  backdrop-filter: blur(12px) !important;
-}
-.btn:hover,
-.small-btn:hover,
-.insight-btn:hover,
-.seg:hover{
-  border-color: rgba(255,255,255,.22) !important;
-  transform: translateY(-1px);
-}
-.btn:active,
-.small-btn:active,
-.insight-btn:active,
-.seg:active{
-  transform: translateY(0px);
+  width:min(120px, 34vw);
+  padding:12px 14px;
+  border-radius:20px;
+  background: rgba(255,255,255,.05);
+  border:1px solid rgba(255,255,255,.10);
+  backdrop-filter: blur(14px);
+  -webkit-backdrop-filter: blur(14px);
+  box-shadow: 0 18px 60px rgba(0,0,0,.35);
+  filter: drop-shadow(0 0 26px rgb(var(--accentRGB) / .14));
 }
 
-/* Keep primary CTA accents, but reduce saturation a touch */
+/* sections: unified premium panels */
+.section,
+.vendor-header,
+.vendor-tools,
+.faq-box{
+  background: var(--glass);
+  border:1px solid var(--stroke);
+  border-radius: var(--radius-xl);
+  box-shadow: var(--shadow-md);
+  backdrop-filter: blur(16px);
+  -webkit-backdrop-filter: blur(16px);
+}
+.section{ padding:18px; }
+@media (max-width:560px){
+  .section{ padding:16px 14px; }
+}
+
+/* analyzer hero: two-card layout like mockup */
+#analyzerSection{
+  border-color: rgb(var(--accentRGB) / .20);
+  background:
+    radial-gradient(900px 360px at 50% 0%, rgb(var(--accentRGB) / .16), transparent 60%),
+    var(--glass);
+}
+#analyzerSection .cta-row{
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  gap:12px;
+  margin-top:14px;
+}
+@media (max-width:760px){
+  #analyzerSection .cta-row{ grid-template-columns:1fr; }
+}
+.analyze-btn{
+  position:relative;
+  justify-content:flex-start;
+  gap:14px;
+  padding:18px 18px;
+  min-height:92px;
+  text-align:left;
+  border-radius: var(--radius-lg);
+  border:1px solid rgba(255,255,255,.12);
+  background: rgba(0,0,0,.14);
+  box-shadow: 0 22px 70px rgba(0,0,0,.45);
+}
+.analyze-btn::before{
+  opacity:.30;
+}
+.analyze-btn::after{
+  content:"→";
+  position:absolute;
+  right:16px;
+  top:50%;
+  transform: translateY(-50%);
+  font-weight:1000;
+  opacity:.85;
+}
+.analyze-btn .icon{
+  width:48px;
+  height:48px;
+  border-radius:16px;
+  background: rgba(255,255,255,.06);
+  border:1px solid rgba(255,255,255,.12);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.05);
+}
 .analyze-btn.primary{
-  filter: saturate(.92);
+  color:#fff;
+  background: linear-gradient(180deg, rgb(var(--accentRGB) / .24), rgba(255,255,255,.04));
+  border-color: rgb(var(--accentRGB) / .28);
+  box-shadow: 0 22px 70px rgb(var(--accentRGB) / .10);
 }
 .analyze-btn.secondary{
-  filter: saturate(.90);
+  color:#fff;
+  background: rgba(255,255,255,.05);
+  border-color: rgba(255,255,255,.14);
+  box-shadow: 0 22px 70px rgba(0,0,0,.52);
+}
+.analyze-btn:hover{
+  transform: translateY(-2px);
+  filter: brightness(1.03) saturate(1.03);
 }
 
-/* Quick tools buttons: cleaner look */
-.small-btn{
-  border-radius: 999px !important;
-  padding: 10px 14px !important;
+/* buttons: match premium palette */
+.insight-btn,
+.small-btn,
+.btn.copy,
+.btn.more{
+  border-color: rgb(var(--accentRGB) / .22) !important;
 }
-.small-btn.active{
-  border-color: rgba(74,163,255,.40) !important;
-  background: linear-gradient(135deg, rgba(74,163,255,.14), rgba(73,240,255,.06)) !important;
+.insight-btn{
+  background: linear-gradient(135deg, rgb(var(--accentRGB) / .92), rgb(var(--accentRGB) / .62));
+  color:#07131a;
+  box-shadow: 0 16px 44px rgb(var(--accentRGB) / .12);
+}
+.insight-btn:hover{ filter: brightness(1.03) saturate(1.05); }
+.btn.go{
+  background: linear-gradient(135deg, rgb(var(--accentRGB) / .95), rgb(var(--accentRGB) / .70));
+  color:#07131a;
 }
 
-/* Popup action buttons: consistent premium glass */
-.btn.copy, .btn.go, .btn.share{
-  border-radius: 14px !important;
+/* cards: slightly more premium */
+.card{
+  background: var(--glass);
+  border:1px solid rgba(255,255,255,.08);
+  border-radius: var(--radius-lg);
+  box-shadow: var(--shadow-md);
+}
+.card:hover{
+  border-color: rgb(var(--accentRGB) / .20);
+  box-shadow: var(--shadow-lg);
+}
+.card.card--imageOnly .img-box{ border-radius: var(--radius-lg); }
+.img-box::after{ background:linear-gradient(180deg,rgba(0,0,0,.08),rgba(0,0,0,.66)); }
+
+/* vendor section headers: less intrusive */
+.vendor-section-head{
+  padding:8px 4px 6px;
+  opacity:.92;
+}
+.vsh-title{ font-size:15px; }
+.vsh-chip{
+  background: rgba(255,255,255,.06);
+  color: rgba(255,255,255,.92);
+  border:1px solid rgb(var(--accentRGB) / .18);
+  box-shadow:none;
+}
+.vendor-section[data-section="verified"] .vsh-chip{
+  background: rgba(255,255,255,.05);
+  border-color: rgba(255,255,255,.16);
+}
+
+/* notice bar: more subtle, premium line */
+.notice-bar{
+  background: rgba(12,14,22,.46);
+  border-color: rgba(255,255,255,.12);
+  box-shadow: 0 16px 46px rgba(0,0,0,.34);
+}
+.notice-bar::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  border-radius:999px;
+  border:1px solid rgb(var(--accentRGB) / .22);
+  opacity:.35;
+  pointer-events:none;
+}
+.notice-bar.is-scrolled{
+  opacity:.55;
+  background: rgba(12,14,22,.34);
+}
+
+/* vendor tools: keep sticky but match new glass */
+.vendor-tools{
+  background: rgba(12,14,22,.62);
+  border-color: rgba(255,255,255,.12);
+}
+.vendor-tools::before{ opacity:.75; }
+
+
+/* ===== v13.1 polish (premium & less-blue) ===== */
+
+/* 1) remove all "TODAY/MAIN/CHECK..." badges in section titles */
+.title .badge{ display:none !important; }
+
+/* 2) logo: no wrapped card, slightly larger */
+.header .logoImg{
+  width:min(142px, 40vw) !important;
+  padding:0 !important;
+  background: transparent !important;
+  border: 0 !important;
+  box-shadow: none !important;
+  border-radius: 0 !important;
+  filter: drop-shadow(0 10px 30px rgba(0,0,0,.55)) drop-shadow(0 0 26px rgb(var(--accentRGB) / .12)) !important;
+}
+
+/* 3) buttons: reduce heavy blue fills, keep premium glass + subtle accent */
+.insight-btn{
+  background: rgba(255,255,255,.07) !important;
+  color: rgba(255,255,255,.92) !important;
+  border:1px solid rgba(255,255,255,.14) !important;
+  box-shadow: 0 14px 40px rgba(0,0,0,.45) !important;
+}
+.insight-btn:hover{
+  background: rgba(255,255,255,.09) !important;
+  border-color: rgb(var(--accentRGB) / .22) !important;
+  box-shadow: 0 18px 52px rgba(0,0,0,.55), 0 0 0 1px rgb(var(--accentRGB) / .10) inset !important;
+  filter:none !important;
+}
+.small-btn,
+.btn.copy,
+.btn.more{
+  background: rgba(255,255,255,.06) !important;
+  color: rgba(255,255,255,.90) !important;
+  border:1px solid rgba(255,255,255,.14) !important;
+  box-shadow: 0 12px 34px rgba(0,0,0,.38) !important;
+}
+.small-btn:hover,
+.btn.copy:hover,
+.btn.more:hover{
+  background: rgba(255,255,255,.08) !important;
+  border-color: rgb(var(--accentRGB) / .20) !important;
 }
 .btn.go{
-  border-color: rgba(74,163,255,.35) !important;
-  background: linear-gradient(135deg, rgba(74,163,255,.16), rgba(73,240,255,.06)) !important;
+  background: rgba(255,255,255,.07) !important;
+  color: rgba(255,255,255,.95) !important;
+  border:1px solid rgb(var(--accentRGB) / .18) !important;
+  box-shadow: 0 14px 40px rgba(0,0,0,.45) !important;
+}
+.btn.go:hover{
+  background: rgba(255,255,255,.09) !important;
+  border-color: rgb(var(--accentRGB) / .26) !important;
 }
 
-/* 4) Thumbnail polishing (in case any blue cast remains) */
-.vendor-grid img,
-.card-grid img,
-.card img{
-  filter: saturate(.94) contrast(1.05) brightness(1.02) !important;
+/* optional: make active segment less "painted" */
+.seg.active{
+  background: linear-gradient(180deg, rgb(var(--accentRGB) / .20), rgba(255,255,255,.06)) !important;
+  color: rgba(255,255,255,.95) !important;
+  border-color: rgb(var(--accentRGB) / .18) !important;
 }
 
-/* 5) Remove any leftover header logo “plate” wrappers if present */
-.header .logoPlate,
-.header .logoCard,
-.header .logoBg{
-  display:none !important;
+/* 4) thumbnail premium tone: slightly lower saturation, higher contrast */
+.card.card--imageOnly .img-box img{
+  filter: contrast(1.09) saturate(.90) brightness(.99);
+  transform: translateZ(0);
+}
+.card.card--imageOnly:hover .img-box img{
+  filter: contrast(1.11) saturate(.94) brightness(1.01);
+}
+.img-box::after{
+  background: linear-gradient(180deg, rgba(0,0,0,.02), rgba(0,0,0,.74)) !important;
 }
 
 </style>
