--- a/casino/landing-a_index.html
+++ b/casino/landing-a_index.html
@@ -29,6 +29,87 @@ body{margin:0;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,syste
 .mini-sub{margin-top:6px;font-size:12px;color:#cfcfcf;line-height:1.4}
 .footer{margin-top:14px;color:#9a9a9a;font-size:12px;line-height:1.55;text-align:center}
 </style>
+
+<style id="v13_1_theme_override">
+/* === v13.1 look unify (from main index) === */
+:root{
+  /* unify accent (blue) */
+  --accent1:#5fb2ff !important;
+  --accent2:#a8dcff !important;
+  --accentRGB:95,178,255 !important;  /* for rgba(var(--accentRGB), .xx) */
+  --accentText:#00121a !important;
+  --accentOn:#00121a !important;
+
+  /* unify tokens */
+  --bg:#05060b !important;
+  --panel:rgba(12,14,22,.62) !important;
+  --glassA:.72 !important;
+  --glassStrongA:.86 !important;
+  --glassSoftA:.18 !important;
+  --glassBorder:rgba(255,255,255,.10) !important;
+
+  /* backward compat */
+  --gold: var(--accent1) !important;
+  --gold2: var(--accent2) !important;
+}
+
+/* premium midnight background */
+body{
+  background:
+    radial-gradient(1200px 620px at 50% -10%, rgba(var(--accentRGB),.18), transparent 58%),
+    radial-gradient(900px 540px at 15% 25%, rgba(120,170,255,.10), transparent 55%),
+    radial-gradient(900px 640px at 85% 35%, rgba(80,140,255,.08), transparent 55%),
+    linear-gradient(180deg, #05060b 0%, #060612 60%, #040408 100%) !important;
+  color:#fff;
+  font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
+}
+
+/* remove small label badges (TODAY/MAIN/NEW...) */
+.title .badge,
+.section-title .badge,
+h1 .badge,
+h2 .badge,
+h3 .badge{ display:none !important; }
+
+/* panel unification (safe selectors) */
+.section, .panel, .box, .card, .wrap, .container, .hero, header{
+  backdrop-filter: blur(16px);
+  -webkit-backdrop-filter: blur(16px);
+}
+
+/* inputs */
+input, select, textarea{
+  background: rgba(0,0,0,.28) !important;
+  border:1px solid rgba(255,255,255,.14) !important;
+  color:#fff !important;
+  border-radius:14px !important;
+  outline:none;
+}
+input:focus, select:focus, textarea:focus{
+  border-color: rgba(var(--accentRGB), .38) !important;
+  box-shadow: 0 0 0 3px rgba(var(--accentRGB), .12) !important;
+}
+
+/* buttons: less-blue, premium glass */
+.btn, button, a.btn{
+  background: rgba(255,255,255,.06) !important;
+  border:1px solid rgba(255,255,255,.14) !important;
+  color: rgba(255,255,255,.92) !important;
+  box-shadow: 0 12px 34px rgba(0,0,0,.38) !important;
+}
+.btn:hover, button:hover, a.btn:hover{ filter: brightness(1.06); }
+.btn.primary, .btn.go{
+  border-color: rgba(var(--accentRGB), .22) !important;
+  background: rgba(255,255,255,.08) !important;
+}
+.btn.secondary, .btn.ghost{
+  background: rgba(0,0,0,.18) !important;
+}
+
+/* links */
+a{ color:inherit; }
+</style>
+
 </head>
 <body>
 <div class="wrap">
