--- a/tool-ev/index.html
+++ b/tool-ev/index.html
@@ -114,6 +114,87 @@ footer{ margin-top:16px; color:rgba(255,255,255,.50); font-size:12px; line-heigh
 </style>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "손익분기점 승률은 왜 1/배당인가요?", "acceptedAnswer": {"@type": "Answer", "text": "배당이 o일 때, 기대수익이 0이 되는 확률이 1/o 입니다(수수료·마진 단순화 가정)."}}, {"@type": "Question", "name": "+EV이면 무조건 이기나요?", "acceptedAnswer": {"@type": "Answer", "text": "아닙니다. +EV는 장기 평균 관점에서 유리할 ‘가능성’을 뜻합니다. 단기 변동성은 매우 큽니다."}}, {"@type": "Question", "name": "추정 승률은 어떻게 잡나요?", "acceptedAnswer": {"@type": "Answer", "text": "최근 폼, 라인업, 일정, 상대 전적, 시장 변동 등 여러 요소를 참고해 ‘내 기준’으로 추정합니다."}}, {"@type": "Question", "name": "마진(오버라운드)을 제거한 EV도 있나요?", "acceptedAnswer": {"@type": "Answer", "text": "가능합니다. 마진 계산기로 공정확률을 만든 뒤, 그 기준으로 승률/배당을 비교하면 더 보수적인 평가가 됩니다."}}, {"@type": "Question", "name": "추천 배팅 금액도 계산되나요?", "acceptedAnswer": {"@type": "Answer", "text": "현재 페이지는 EV만 계산합니다. 향후 켈리/유닛 사이징 도구로 확장할 수 있습니다."}}]}</script>
 <script src="../assets/theme-preset.js" defer></script>
+
+<style id="v13_1_theme_override">
+/* === v13.1 look unify (from main index) === */
+:root{
+  /* unify accent (blue) */
+  --accent1:#5fb2ff !important;
+  --accent2:#a8dcff !important;
+  --accentRGB:95,178,255 !important;  /* for rgba(var(--accentRGB), .xx) */
+  --accentText:#00121a !important;
+  --accentOn:#00121a !important;
+
+  /* unify tokens */
+  --bg:#05060b !important;
+  --panel:rgba(12,14,22,.62) !important;
+  --glassA:.72 !important;
+  --glassStrongA:.86 !important;
+  --glassSoftA:.18 !important;
+  --glassBorder:rgba(255,255,255,.10) !important;
+
+  /* backward compat */
+  --gold: var(--accent1) !important;
+  --gold2: var(--accent2) !important;
+}
+
+/* premium midnight background */
+body{
+  background:
+    radial-gradient(1200px 620px at 50% -10%, rgba(var(--accentRGB),.18), transparent 58%),
+    radial-gradient(900px 540px at 15% 25%, rgba(120,170,255,.10), transparent 55%),
+    radial-gradient(900px 640px at 85% 35%, rgba(80,140,255,.08), transparent 55%),
+    linear-gradient(180deg, #05060b 0%, #060612 60%, #040408 100%) !important;
+  color:#fff;
+  font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
+}
+
+/* remove small label badges (TODAY/MAIN/NEW...) */
+.title .badge,
+.section-title .badge,
+h1 .badge,
+h2 .badge,
+h3 .badge{ display:none !important; }
+
+/* panel unification (safe selectors) */
+.section, .panel, .box, .card, .wrap, .container, .hero, header{
+  backdrop-filter: blur(16px);
+  -webkit-backdrop-filter: blur(16px);
+}
+
+/* inputs */
+input, select, textarea{
+  background: rgba(0,0,0,.28) !important;
+  border:1px solid rgba(255,255,255,.14) !important;
+  color:#fff !important;
+  border-radius:14px !important;
+  outline:none;
+}
+input:focus, select:focus, textarea:focus{
+  border-color: rgba(var(--accentRGB), .38) !important;
+  box-shadow: 0 0 0 3px rgba(var(--accentRGB), .12) !important;
+}
+
+/* buttons: less-blue, premium glass */
+.btn, button, a.btn{
+  background: rgba(255,255,255,.06) !important;
+  border:1px solid rgba(255,255,255,.14) !important;
+  color: rgba(255,255,255,.92) !important;
+  box-shadow: 0 12px 34px rgba(0,0,0,.38) !important;
+}
+.btn:hover, button:hover, a.btn:hover{ filter: brightness(1.06); }
+.btn.primary, .btn.go{
+  border-color: rgba(var(--accentRGB), .22) !important;
+  background: rgba(255,255,255,.08) !important;
+}
+.btn.secondary, .btn.ghost{
+  background: rgba(0,0,0,.18) !important;
+}
+
+/* links */
+a{ color:inherit; }
+</style>
+
 </head>
 <body>
   <div class="wrap">
