--- a/tool-odds/index.html
+++ b/tool-odds/index.html
@@ -114,6 +114,87 @@ footer{ margin-top:16px; color:rgba(255,255,255,.50); font-size:12px; line-heigh
 </style>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "배당 2.00은 확률로 얼마인가요?", "acceptedAnswer": {"@type": "Answer", "text": "암시 확률은 1/2.00 = 50% 입니다(단일 결과 기준)."}}, {"@type": "Question", "name": "확률 60%면 공정 배당은?", "acceptedAnswer": {"@type": "Answer", "text": "공정 배당은 1/0.60 = 1.667 입니다(마진 없는 단순 계산)."}}, {"@type": "Question", "name": "여러 결과(승/무/패)는 어떻게 하나요?", "acceptedAnswer": {"@type": "Answer", "text": "각 결과 배당을 모두 넣고 마진 계산기에서 오버라운드를 구한 뒤, 공정확률/공정배당을 확인하는 방식이 정확합니다."}}, {"@type": "Question", "name": "마진이 있으면 확률 변환이 왜 달라지나요?", "acceptedAnswer": {"@type": "Answer", "text": "북메이커는 각 결과에 수수료를 포함시키기 때문에(오버라운드), 단순 1/배당의 합이 100%를 넘을 수 있습니다."}}, {"@type": "Question", "name": "이 변환은 언제 쓰면 좋나요?", "acceptedAnswer": {"@type": "Answer", "text": "손익분기점 계산, EV 계산의 기본 입력값 확인, 배당 비교(가치 판단)에 유용합니다."}}]}</script>
 <script src="../assets/theme-preset.js" defer></script>
+
+<style id="v13_1_theme_override">
+/* === v13.1 look unify (from main index) === */
+:root{
+  /* unify accent (blue) */
+  --accent1:#5fb2ff !important;
+  --accent2:#a8dcff !important;
+  --accentRGB:95,178,255 !important;  /* for rgba(var(--accentRGB), .xx) */
+  --accentText:#00121a !important;
+  --accentOn:#00121a !important;
+
+  /* unify tokens */
+  --bg:#05060b !important;
+  --panel:rgba(12,14,22,.62) !important;
+  --glassA:.72 !important;
+  --glassStrongA:.86 !important;
+  --glassSoftA:.18 !important;
+  --glassBorder:rgba(255,255,255,.10) !important;
+
+  /* backward compat */
+  --gold: var(--accent1) !important;
+  --gold2: var(--accent2) !important;
+}
+
+/* premium midnight background */
+body{
+  background:
+    radial-gradient(1200px 620px at 50% -10%, rgba(var(--accentRGB),.18), transparent 58%),
+    radial-gradient(900px 540px at 15% 25%, rgba(120,170,255,.10), transparent 55%),
+    radial-gradient(900px 640px at 85% 35%, rgba(80,140,255,.08), transparent 55%),
+    linear-gradient(180deg, #05060b 0%, #060612 60%, #040408 100%) !important;
+  color:#fff;
+  font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui;
+}
+
+/* remove small label badges (TODAY/MAIN/NEW...) */
+.title .badge,
+.section-title .badge,
+h1 .badge,
+h2 .badge,
+h3 .badge{ display:none !important; }
+
+/* panel unification (safe selectors) */
+.section, .panel, .box, .card, .wrap, .container, .hero, header{
+  backdrop-filter: blur(16px);
+  -webkit-backdrop-filter: blur(16px);
+}
+
+/* inputs */
+input, select, textarea{
+  background: rgba(0,0,0,.28) !important;
+  border:1px solid rgba(255,255,255,.14) !important;
+  color:#fff !important;
+  border-radius:14px !important;
+  outline:none;
+}
+input:focus, select:focus, textarea:focus{
+  border-color: rgba(var(--accentRGB), .38) !important;
+  box-shadow: 0 0 0 3px rgba(var(--accentRGB), .12) !important;
+}
+
+/* buttons: less-blue, premium glass */
+.btn, button, a.btn{
+  background: rgba(255,255,255,.06) !important;
+  border:1px solid rgba(255,255,255,.14) !important;
+  color: rgba(255,255,255,.92) !important;
+  box-shadow: 0 12px 34px rgba(0,0,0,.38) !important;
+}
+.btn:hover, button:hover, a.btn:hover{ filter: brightness(1.06); }
+.btn.primary, .btn.go{
+  border-color: rgba(var(--accentRGB), .22) !important;
+  background: rgba(255,255,255,.08) !important;
+}
+.btn.secondary, .btn.ghost{
+  background: rgba(0,0,0,.18) !important;
+}
+
+/* links */
+a{ color:inherit; }
+</style>
+
 </head>
 <body>
   <div class="wrap">
